--- a/package.json
+++ b/package.json
@@ -9,17 +9,39 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.19.0",
+    "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
+    "date-fns": "^4.1.0",
+    "leaflet": "^1.9.4",
     "next": "16.0.3",
+    "next-auth": "^4.24.13",
+    "next-cloudinary": "^6.17.5",
+    "query-string": "^9.3.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-date-range": "^2.0.1",
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.66.0",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
+    "react-select": "^5.10.2",
+    "react-spinners": "^0.17.0",
+    "world-countries": "^5.1.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-date-range": "^1.4.10",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
